--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 *.vbproj merge=union
 *.fsproj merge=union
 *.dbproj merge=union
+*.powerpack merge=union
 
 # Standard to msysgit
 *.doc	 diff=astextplain
